# quant-research-lab

./: .gitignore  README.md  pyproject.toml  requirements.txt
cpp/: CMakeLists.txt
cpp/benchmarks/: benchmark_order_book.cpp
cpp/include/: order_book.hpp
cpp/src/: main.cpp  order_book.cpp
cpp/tests/: test_order_book.cpp
docs/: probability_for_trading.md  project_plan.md
reports/: final_research_report_v1.md  week_5_backtest_results.md  week_6_ml_results.md  week_7_options_results.md
src/backtest/: metrics.py  run_backtests.py  strategies.py  vectorized.py
src/data/: clean.py  download.py
src/features/: build_features.py
src/models/: baseline.py  run_ml_experiment.py  walk_forward.py
src/options/: black_scholes.py  delta_hedging.py  implied_vol.py  run_options_experiment.py
src/reporting/: generate_report_assets.py
src/simulations/: coin_market_making.py  kelly_betting.py  markov_chain.py  poisson_arrivals.py
tests/: test_backtest.py  test_data_cleaning.py  test_features.py  test_options.py  test_simulations.py  test_walk_forward.py
